--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ psycopg2==2.5.1
 pyflakes==0.7.3
 python-memcached==1.53
 redis==2.7.6
-six==1.3.0
-uWSGI==1.9.13
+#six==1.3.0
+#uWSGI==1.9.13
 wsgiref==0.1.2
 zope.interface==4.0.5
